<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:id="@+id/linear_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@drawable/rounded_corners_white_radius_12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/authTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_16"
            android:text="@string/auth_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20" />

        <com.assignment.loginandpay.presentation.utils.AuthInputLayoutView
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            app:hint="@string/login_text_hint"
            app:type="text" />

        <com.assignment.loginandpay.presentation.utils.AuthInputLayoutView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_16"
            app:hint="@string/password"
            app:type="password" />

        <TextView
            android:id="@+id/forget_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_36"
            android:layout_marginBottom="@dimen/margin_24"
            android:text="@string/forget_password"
            android:textSize="14sp" />

        <Button
            android:id="@+id/authButton"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_16"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_16" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>